--- a/BasicReactScaffold/package.json
+++ b/BasicReactScaffold/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,12 +27,15 @@
     "css-minimizer-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^11.0.1",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "prod": "webpack --mode production",
-    "start": "cross-env NODE_ENV=development webpack serve "
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "start": "cross-env NODE_ENV=development webpack serve  --config webpack.dev.js"
   }
 }
